# freedom-label

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  temp_label_template.md
.gemini/: frontend-agent.md
.github/: .gitignore  copilot-instructions.md
.github/instructions/: 00_dg-cs-README.instructions.md  00_dg-index.instructions.md  01_dg-cs-js-ts-style-guide.instructions.md  02_dg-technologies-README.instructions.md  03_dg-accessibility.instructions.md  05_dg-code_style.instructions.md  06_dg-state-management.instructions.md  14_frontend_mvp_business_requirements.instructions.md  14_style_refactor_prompt.instructions.md  15_user_stories_instructions.instructions.md  16_frontend-agent.instructions.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/print/: __init__.py  create_pdf.py  print_pdf.py  services.py
backend/tests/: test_main.py
built-in/: index.html
deploy/: docker-rollout.sh
devops/: docker-compose.yml  update-app.sh
docs/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  OPEN_VPN.md  index.md
frontend/: .gitignore  .prettierrc.js  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json
instructions/: 0_initial_scaffolding.md  1_packages.md  2_backend_data_refactor.md  3_devops_docker_refactor.md  4_devops_pipeline.md  4_frontend_mvp_business_requirements.md  5_user_stories_instructions.md
transformers/: index.html
(+45 files in other folders)
